# ShadowSync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  config.example.json  mkdocs.yml
.cargo/: config.toml
.github/installer/: shadowsync.iss  usb_mirror_sync.iss
.github/scripts/: generate-release-notes.py  package-linux.sh  package-macos.sh  package-release.ps1
.github/workflows/: docs.yml  release.yml
assets/: setup_wizard.ps1
docs/: configuration.md  contributing.md  getting-started.md  index.md  installer-and-releases.md  releases.md  reset-and-cleanup.md  sync-model.md  tray-app.md  troubleshooting.md
docs/assets/javascripts/: mermaid-init.js
docs/assets/stylesheets/: extra.css
src/: app.rs  config.rs  main.rs  platform.rs  single_instance.rs  sync_engine.rs  update.rs  watcher.rs  windows_util.rs  wizard.rs
tools/reset/: README.md  reset-linux.sh  reset-macos.sh  reset-windows.bat
