[package]
name = "usb_mirror_sync"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
filetime = "0.2.25"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tray-icon = "0.21.3"
walkdir = "2.5.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
winit = "0.30.13"

[build-dependencies]
ico = "0.5.0"
resvg = "0.47.0"
winresource = "0.1.31"

[dev-dependencies]
tempfile = "3.27.0"
