[package]
name = "shadowsync"
version = "0.1.1"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
filetime = "0.2.25"
fs2 = "0.4.3"
notify = "8.2.0"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tray-icon = { version = "0.21.3", default-features = false }
walkdir = "2.5.0"
winit = "0.30.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
ico = "0.5.0"
png = "0.18.0"
resvg = "0.47.0"
winresource = "0.1.31"

[dev-dependencies]
tempfile = "3.27.0"
